Fix spacing issues on places page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,6 +48,11 @@ a:hover {
   padding-top: 10px;
 }
 
+.padding-to-bottom-10 {
+  padding-bottom: 10px;
+}
+
+
 textarea {
   width: 100%;
 }
@@ -183,7 +188,7 @@ footer {
 }
 
 .filter {
-  padding-top: 5px;
+  padding-top: 10px;
   padding-bottom: 8px;
 }
 
